test_project/test_pcks/invalid/gdscript_resource.tres
[gd_resource type="BoxShape3D" load_steps=2 format=3 uid="uid://3cpstcr2jga0"]

[sub_resource type="GDScript" id="GDScript_atiky"]
script/source = "extends Resource
"

[resource]
script = SubResource("GDScript_atiky")
